Add server-internal call-timing to the record-and-replay harness
Capture per-call processing time in the recorder and report recorded-vs-
replayed time in the replayer. Both sides measure server-internal time so
the numbers are comparable by construction: the recorder times around the
filter chain and emits it as the X-Replay-Duration-Millis header, and the
replayer reads that header (falling back to, and flagging, its client
round-trip when absent). Timing is informational only and gated behind the
report-timing flag (off by default). Bumps version to 1.1.0.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>